[tool.poetry]
name = "fey_mood"
version = "0.1.0"
description = "An exercise in LLM directed crafts"
authors = ["Mika Naylor <mail@autophagy.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.4"

[tool.poetry.scripts]
fey_mood = 'fey_mood:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
